/ ‘Topology/ReviewDoc/TopologyQualifyingExamNotes.md’ / ‘Topology/ReviewDoc/TopologyQualifyingExamNotes.tex’ / ‘Topology/ReviewDoc/TopologyQualifyingExamNotes_stripped.md’

--- a/Topology/ReviewDoc/TopologyQualifyingExamNotes.tex
+++ b/Topology/ReviewDoc/TopologyQualifyingExamNotes.tex
@@ -279,7 +279,7 @@ Given two topologies \(\tau_1, \tau_2\),
   \(\tau_1 \supseteq\tau_2\).
 \item
   \(\tau_1\) is \textbf{coarser} than \(\tau_2\) iff
-  \(\tau_1 \iscontainedin \tau_2\).
+  \(\tau_1 \supseteq\tau_2\).
 \end{itemize}
 
 Two topologies are \textbf{comparable} if either \(\tau_1 < \tau_2\) or
