--- a/Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.tex
+++ b/Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.tex
@@ -469,11 +469,8 @@ Let \(G\) be a nonabelian group of order \(p^3\) for \(p\) prime. Show
 that \(Z(G) = [G, G]\).
 
 \begin{quote}
-Note: this is a good problem!
-\end{quote}
-
-\begin{quote}
-Proof due to Paco Adajar
+Note: this is a good problem, it tests several common theorems at once.
+Proof due to Paco Adajar.
 \end{quote}
 
 \begin{concept}
