--- a/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
+++ b/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
@@ -432,7 +432,7 @@ taking (say) a principal branch of \(\log\) given by
 
 \begin{remark}
 
-When parameterizing integrals \$\int\_\gammaf(z)\,dz\$, parameterize
+When parameterizing integrals \(\int_\gamma f(z)\,dz\), parameterize
 \(\gamma\) by \(\theta\) and write \(z=re^{i\theta}\) so
 \(\,dz= ire^{i\theta}\,d\theta\).
 
@@ -818,7 +818,7 @@ both holomorphic on a domain \(\Omega\), then \(f\) is constant on
 
 \end{solution}
 
-\begin{exercise}[S&S 1.13: Constant real/imaginary/magnitude implies constant]
+\begin{exercise}[SS 1.13: Constant real/imaginary/magnitude implies constant]
 
 If \(f\) is holomorphic on \(\Omega\) and any of the following hold,
 then \(f\) is constant:
@@ -1491,7 +1491,7 @@ If \(z_0\) is a singularity of \(f\). then \(z_0\) is a
 \(g\) such that \(f(z) = g(z)\) in a punctured neighborhood of \(z_0\).
 Equivalently,
 \begin{align*}
-\lim_{z\to \z_0}(z-z_0) f(z) = 0
+\lim_{z\to z_0}(z-z_0) f(z) = 0
 .\end{align*}
 Equivalently, \(f\) is bounded on a neighborhood of \(z_0\).
 
@@ -1509,7 +1509,7 @@ extension of \(f\) to all of \(\Omega\).
 
 Take \(\gamma\) to be a circle centered at \(z_0\) and use
 \begin{align*}
-f(z) \coloneqq\int_\gamma { f(\xi) \over \xi - z} \dxii
+f(z) \coloneqq\int_\gamma { f(\xi) \over \xi - z} \,dx
 .\end{align*}
 This is valid for \(z\neq z_0\), but the right-hand side is analytic.
 (?)
@@ -2572,7 +2572,7 @@ See section 27, example 1 in Brown and Churchill. On the strip
 \((x, y)\in (0, \pi) \times(0, \infty)\), set up the BVP for temperature
 on a thin plate with no sinks/sources:
 \begin{align*}
-\Laplacian T = 0 && T(0, y) = 0,\, T(\pi, y) = 0 \,\,\forall y \\ \\
+\Delta T = 0 && T(0, y) = 0,\, T(\pi, y) = 0 \,\,\forall y \\ \\
 T(x, 0) = \sin(x) && T(x, y) \overset{y\to\infty}\longrightarrow 0
 .\end{align*}
 
