--- a/Complex Analysis/UGA Question (no solutions)/sections/091_Spring2020_HW1.md
+++ b/Complex Analysis/UGA Question (no solutions)/sections/091_Spring2020_HW1.md
@@ -1,6 +1,4 @@
-# Spring 2020 Homework 1
-
-## 1
+## Spring 2020 HW 1 # 1
 
 Geometrically describe the following subsets of $\CC$:
 
@@ -13,14 +11,14 @@ f. $\Re(z) > a$ with $a\in \RR$.
 g. $\abs{z-1} < 2\abs{z-2}$
 
 
-## 2
+## Spring 2020 HW 1 # 2
 Prove the following inequality, and explain when equality holds:
 \[
 \abs{z+w} \geq \abs{ \abs{z} - \abs{w} }
 .\]
 
 
-## 3
+## Spring 2020 HW 1 # 3
 Prove that the following polynomial has its roots outside of the unit circle:
 \[
 p(z) = z^3 + 2z + 4
@@ -28,7 +26,7 @@ p(z) = z^3 + 2z + 4
 
 > Hint: What is the maximum value of the modulus of the first two terms if $\abs{z} \leq 1$?
 
-## 4
+## Spring 2020 HW 1 # 4
 
 a. Prove that if $c>0$,
 \[
@@ -43,7 +41,7 @@ b. Prove that if $c>0$ and $c\neq 1$, with $z_1\neq z_2$, then the following equ
 
     > Hint: use part (a)
 
-## 5
+## Spring 2020 HW 1 # 5
 
 a. Let $z, w \in \CC$ with $\bar z w \neq 1$. 
     Prove that
@@ -58,7 +56,7 @@ b. Prove that for a fixed $w\in \DD$, the mapping $F: z\mapsto {w-z \over 1 - \b
     - $F(0) = w$ and $F(w) = 0$.
     - $\abs{z} = 1$ implies $\abs{F(z)} = 1$.
 
-## 6
+## Spring 2020 HW 1 # 6
 
 Use $n$th roots of unity to show that
 \[
@@ -71,11 +69,11 @@ Use $n$th roots of unity to show that
 2 \sin(2\theta) &= 2\sin(\theta) \cos(\theta)
 .\]
 
-## 7
+## Spring 2020 HW 1 # 7
 Prove that $f(z) = \abs{z}^2$ has a derivative at $z=0$ and nowhere else.
 
 
-## 8
+## Spring 2020 HW 1 # 8
 
 Let $f(z)$ be analytic in a domain, and prove that $f$ is constant if it satisfies any of the following conditions:
 
@@ -87,11 +85,11 @@ d. $\bar{f(z)}$ is analytic.
 How do you generalize (a) and (b)?
 
 
-## 9
+## Spring 2020 HW 1 # 9
 Prove that if $z\mapsto f(z)$ is analytic, then $z \mapsto \bar{f(\bar z)}$ is analytic.
 
 
-## 10
+## Spring 2020 HW 1 # 10
 
 a. Show that in polar coordinates, the Cauchy-Riemann equations take the form
   \[
@@ -106,7 +104,7 @@ b. Use (a) to show that the logarithm function, defined as
 
   Also show that this function is not continuous in $r>0$.
 
-## 11
+## Spring 2020 HW 1 # 11
 
 Prove that the distinct complex numbers $z_1, z_2, z_3$ are the vertices of an equilateral triangle if and only if
 \[
