/ ‘Complex Analysis/UGA Question (no solutions)/sections/092_Spring2020_HW2.md’

--- a/Complex Analysis/UGA Question (no solutions)/sections/092_Spring2020_HW2.md
+++ b/Complex Analysis/UGA Question (no solutions)/sections/092_Spring2020_HW2.md
@@ -4,7 +4,7 @@
 
 ## Stein And Shakarchi
 
-### 2.6.1
+### Spring 20202 HW 2 #  2.6.1
 
 Show that
 \[
@@ -17,7 +17,7 @@ Show that
 ![Image](figures/2020-02-03-13:51.png)\
 
 
-### 2.6.2
+### Spring 20202 HW 2 #  2.6.2
 
 Show that
 
@@ -27,7 +27,7 @@ Show that
 
 > Hint: use the fact that this integral equals $\frac{1}{2 i} \int_{-\infty}^{\infty} \frac{e^{i x}-1}{x} d x$, and integrate around an indented semicircle.
 
-### 2.6.5
+### Spring 20202 HW 2 #  2.6.5
 
 Suppose $f\in C_\CC^1(\Omega)$ and $T\subset \Omega$ is a triangle with $T^\circ \subset \Omega$.
 Apply Green's theorem to show that $\int_T f(z) ~dz = 0$.
@@ -40,13 +40,13 @@ Assume that $f'$ is continuous and prove Goursat's theorem.
 \int_{T} F d x+G d y=\int_{T^\circ}\left(\frac{\partial G}{\partial x}-\frac{\partial F}{\partial y}\right) d x d y
 .\]
 
-### 2.6.6
+### Spring 20202 HW 2 #  2.6.6
 
 Suppose that $f$ is holomorphic on a punctured open set $\Omega\setminus\theset{w_0}$ and let $T\subset \Omega$ be a triangle containing $w_0$.
 Prove that if $f$ is bounded near $w_0$, then $\int_T f(z) ~dz = 0$.
 
 
-### 2.6.7
+### Spring 20202 HW 2 #  2.6.7
 
 Suppose $f: \DD \to \CC$ is holomorphic and let $d \definedas \sup_{z, w\in \DD}\abs{f(z) - f(w)}$ be the diameter of the image of $f$.
 Show that $2 \abs{f'(0)} \leq d$, and that equality holds iff $f$ is linear, so $f(z) = a_1 z + a_2$.
@@ -54,14 +54,14 @@ Show that $2 \abs{f'(0)} \leq d$, and that equality holds iff $f$ is linear, so 
 > Hint: $2f'(0) = \frac{1}{2\pi i} \int_{\abs \xi = r} \frac{ f(\xi) - f(-\xi)  }{\xi^2} ~d\xi$ whenever $0<r<1$.
 
 
-### 2.6.8
+### Spring 20202 HW 2 #  2.6.8
 
 Suppose that $f$ is holomorphic on the strip $S = \theset{x+iy \suchthat x\in \RR,~ -1<y<1}$ with $\abs{f(z)} \leq A \qty{1 + \abs z}^\nu$ for $\nu$ some fixed real number.
 Show that for all $z\in S$, for each integer $n\geq 0$ there exists an $A_n \geq 0$ such that $\abs{f^{(n)}(x)} \leq A_n (1 + \abs x)^\nu$ for all $x\in \RR$.
 
 > Hint: Use the Cauchy inequalities.
 
-### 2.6.9
+### Spring 20202 HW 2 #  2.6.9
 
 Let $\Omega \subset \CC$ be open and bounded and $\phi: \Omega \to \Omega$ holomorphic.
 Prove that if there exists a point $z_0 \in \Omega$ such that $\phi(z_0) = z_0$ and $\phi'(z_0) = 1$, then $\phi$ is linear.
@@ -71,13 +71,13 @@ Prove that if there exists a point $z_0 \in \Omega$ such that $\phi(z_0) = z_0$ 
   Apply Cauchy's inequalities and let $k\to \infty$ to conclude.
 
 
-### 2.6.10
+### Spring 20202 HW 2 #  2.6.10
 
 Can every continuous function on $\bar \DD$ be uniformly approximated by polynomials in the variable $z$?
 
 > Hint: compare to Weierstrass for the real interval.
 
-### 2.6.13
+### Spring 20202 HW 2 #  2.6.13
 
 Suppose $f$ is analytic, defined on all of $\CC$, and for each $z_0 \in \CC$ there is at least one coefficient in the expansion $f(z) = \sum_{n=0}^\infty c_n(z-z_0)^n$ is zero.
 Prove that $f$ is a polynomial.
@@ -85,21 +85,22 @@ Prove that $f$ is a polynomial.
 > Hint: use the fact that $c_n n! = f^{(n)}(z_0)$ and use a countability argument.
 
 
-### 2.6.14
+### Spring 20202 HW 2 #  2.6.14
 
 Suppose that $f$ is holomorphic in an open set containing $\DD$ except for a pole $z_0 \in \bd \DD$.
 Let $\sum_{n=0}^\infty a_n z^n$ be the power series expansion of $f$ in $\DD$, and show that $\lim \frac{a_n}{a_{n+1}} = z_0$.
 
-### 2.6.15
+### Spring 20202 HW 2 #  2.6.15
 
 Suppose $f$ is continuous and nonvanishing on $\bar \DD$, and holomorphic in $\DD$.
 Prove that if $\abs{z} = 1 \implies \abs{f(z)} = 1$, then $f$ is constant.
 
 > Hint: Extend $f$ to all of $\CC$ by $f(z) = 1/ \bar{f(1/\bar z)}$ for any $\abs{z} > 1$, and argue as in the Schwarz reflection principle.
 
+
 ## Additional Problems
 
-### 1
+### Spring 20202 HW 2 #  1
 Let $a_n\neq 0$ and show that
 \[
 \lim_{n\to \infty} {\abs{a_{n+1}} \over \abs{a_n}} = L \implies \lim_{n\to\infty} \abs{a_n}^{1\over n} = L
@@ -107,12 +108,12 @@ Let $a_n\neq 0$ and show that
 
 In particular, this shows that when applicable, the ratio test can be used to calculate the radius of convergence of a power series.
 
-### 2
+### Spring 20202 HW 2 #  2
 Let $f$ be a power series centered at the origin.
 Prove that $f$ has a power series expansion about any point in its disc of convergence.
 
 
-### 3
+### Spring 20202 HW 2 #  3
 Prove the following:
 
 a. $\sum_{n} nz^n$ does not converge at any point of $S^1$
@@ -121,14 +122,14 @@ b. $\sum_n {z^n \over n^2}$ converges at every point of $S^1$.
 
 c. $\sum_n {z^n \over n}$ converges at every point of $S^1$ except $z=1$.
 
-### 4
+### Spring 20202 HW 2 #  4
 Without using Cauchy's integral formula, show that if $\abs{a} < r < \abs{b}$, then
 \[
 \int_{\gamma} \frac{d z}{(z-\alpha)(z-\beta)}=\frac{2 \pi i}{\alpha-\beta}
 \]
 where $\gamma$ denotes the circle centered at the origin of radius $r$ with positive orientation.
 
-### 5
+### Spring 20202 HW 2 #  5
 Assume $f$ is continuous in the region $\theset{x+iy \suchthat x\geq x_0, ~ 0\leq y \leq b}$, and the following limit exists independent of $y$:
 \[
 \lim_{x\to +\infty}f(x+iy) = A
@@ -140,14 +141,14 @@ Show that if $\gamma_x \definedas \theset{z = x+it \suchthat 0 \leq t \leq b}$, 
 .\]
 
 
-### 6
+### Spring 20202 HW 2 #  6
 Show by example that there exists a function $f(z)$ that is holomorphic on $\theset{z\in \CC \suchthat 0 < \abs{z} < 1}$ and for all $r<1$,
 \[
 \int_{\abs z = r} f(z) \, dz = 0
 ,\]
 but $f$ is not holomorphic at $z=0$.
 
-### 7
+### Spring 20202 HW 2 #  7
 Let $f$ be analytic on a region $R$ and suppose $f'(z_0) \neq 0$ for some $z_0 \in R$.
 Show that if $C$ is a circle of sufficiently small radius centered at $z_0$, then 
 \[
@@ -157,7 +158,7 @@ Show that if $C$ is a circle of sufficiently small radius centered at $z_0$, the
 > Hint: use the inverse function theorem.
 
 
-### 8
+### Spring 20202 HW 2 #  8
 Assume two functions $u, b: \RR^2 \to \RR$ have continuous partial derivatives at $(x_0 ,y_0)$.
 Show that $f \definedas u + iv$ has derivative $f'(z_0)$ at $z_0 = =x_0 + iy_0$ if and only if
 \[
@@ -165,7 +166,7 @@ Show that $f \definedas u + iv$ has derivative $f'(z_0)$ at $z_0 = =x_0 + iy_0$ 
 .\]
 
 
-### 9 (Cauchy's Formula for Exterior Regions)
+### Spring 20202 HW 2 #  9 (Cauchy's Formula for Exterior Regions)
 
 Let $\gamma$ be a piecewise smooth simple closed curve with interior $\Omega_1$ and exterior $\Omega_2$.
 Assume $f'$ exists in an open set containing $\gamma$ and $\Omega_2$ with $\lim_{z\to \infty} f(z) = A$.
@@ -178,7 +179,7 @@ A, & \text { if } z \in \Omega_{1} \\
 .\]
 
 
-### 10
+### Spring 20202 HW 2 #  10
 Let $f(z)$ be bounded and analytic in $\CC$.
 Let $a\neq b$ be any fixed complex numbers.
 Show that the following limit exists:
@@ -189,7 +190,7 @@ Show that the following limit exists:
 Use this to show that $f(z)$ must be constant.
 
 
-### 11
+### Spring 20202 HW 2 #  11
 Suppose $f(z)$ is entire and 
 \[
 \lim_{z\to\infty} {f(z) \over z} = 0
@@ -197,7 +198,7 @@ Suppose $f(z)$ is entire and
 
 Show that $f(z)$ is a constant.
 
-### 12
+### Spring 20202 HW 2 #  12
 Let $f$ be analytic in a domain $D$ and $\gamma$ be a closed curve in $D$.
 For any $z_0\in D$ not on $\gamma$, show that
 \[
@@ -206,7 +207,7 @@ For any $z_0\in D$ not on $\gamma$, show that
 Give a generalization of this result.
 
 
-### 13
+### Spring 20202 HW 2 #  13
 
 Compute
 \[
