--- a/Complex Analysis/UGA Question (no solutions)/sections/093_Spring2020_HW3.md
+++ b/Complex Analysis/UGA Question (no solutions)/sections/093_Spring2020_HW3.md
@@ -2,7 +2,7 @@
 
 ## Stein and Shakarchi
 
-### 3.8.1
+### Spring 20202 HW 3 #  3.8.1
 Use the following formula to show that the complex zeros of $\sin(\pi z)$ are exactly the integers, and they are each of order 1:
 \[
 \sin \pi z=\frac{e^{i \pi z}-e^{-i \pi z}}{2 i}
@@ -11,7 +11,7 @@ Use the following formula to show that the complex zeros of $\sin(\pi z)$ are ex
 Calculate the residue of ${1\over \sin(\pi z)}$ at $z=n\in \ZZ$.
 
 
-### 3.8.2
+### Spring 20202 HW 3 #  3.8.2
 
 Evaluate the integral
 \[
@@ -21,41 +21,41 @@ Evaluate the integral
 What are the poles of ${1\over 1 + z^4}$ ?
 
 
-### 3.8.4
+### Spring 20202 HW 3 #  3.8.4
 Show that
 \[
 \int_{-\infty}^{\infty} \frac{x \sin x}{x^{2}+a^{2}} d x=\pi e^{-a}, \quad \text { for all } a>0
 .\]
 
 
-### 3.8.5
+### Spring 20202 HW 3 #  3.8.5
 Show that if $\xi\in \RR$, then
 \[
 \int_{-\infty}^{\infty} \frac{e^{-2 \pi i x \xi}}{\left(1+x^{2}\right)^{2}} d x=\frac{\pi}{2}(1+2 \pi|\xi|) e^{-2 \pi|\xi|}
 .\]
 
 
-### 3.8.6
+### Spring 20202 HW 3 #  3.8.6
 Show that
 \[
 \int_{-\infty}^{\infty} \frac{d x}{\left(1+x^{2}\right)^{n+1}}=\frac{1 \cdot 3 \cdot 5 \cdots(2 n-1)}{2 \cdot 4 \cdot 6 \cdots(2 n)} \cdot \pi
 .\]
 
 
-### 3.8.7
+### Spring 20202 HW 3 #  3.8.7
 Show that
 \[
 \int_{0}^{2 \pi} \frac{d \theta}{(a+\cos \theta)^{2}}=\frac{2 \pi a}{\left(a^{2}-1\right)^{3 / 2}}, \quad \text { whenever } a>1
 .\]
 
 
-### 3.8.8
+### Spring 20202 HW 3 #  3.8.8
 Show that if $a,b\in \RR$ with $a > \abs{b}$, then
 \[
 \int_{0}^{2 \pi} \frac{d \theta}{a+b \cos \theta}=\frac{2 \pi}{\sqrt{a^{2}-b^{2}}}
 .\]
 
-### 3.8.9
+### Spring 20202 HW 3 #  3.8.9
 Show that
 \[
 \int_{0}^{1} \log (\sin \pi x) d x=-\log 2
@@ -65,7 +65,7 @@ Show that
 >
 > ![](figures/image_2020-06-17-21-52-40.png)
 
-### 3.8.10
+### Spring 20202 HW 3 #  3.8.10
 Show that if $a>0$, then
 \[
 \int_{0}^{\infty} \frac{\log x}{x^{2}+a^{2}} d x=\frac{\pi}{2 a} \log a
@@ -75,12 +75,12 @@ Show that if $a>0$, then
 >
 > ![](figures/image_2020-06-17-21-53-19.png)
 
-### 3.8.14
+### Spring 20202 HW 3 #  3.8.14
 Prove that all entire functions that are injective are of the form $f(z) = az + b$ with $a,b\in \CC$ and $a\neq 0$.
 
 > Hint: Apply the Casorati-Weierstrass theorem to $f(1/z)$.
 
-### 3.8.15
+### Spring 20202 HW 3 #  3.8.15
 Use the Cauchy inequalities or the maximum modulus principle to solve the following problems:
 
 a. Prove that if $f$ is an entire function that satisfies
@@ -99,7 +99,7 @@ c. Let $w_1, \cdots w_n$ be points on $S^1 \subset \CC$.
 d. Show that if the real part of an entire function is bounded, then $f$ is constant.
 
 
-### 3.8.17
+### Spring 20202 HW 3 #  3.8.17
 
 Let $f$ be non-constant and holomorphic in an open set containing the closed unit disc.
 
@@ -111,7 +111,7 @@ a. Show that if $\abs{f(z)} = 1$ whenever $\abs{z} = 1$, then the image of $f$ c
 b. If $\abs{f(z)} \geq 1$ whenever $\abs{z} = 1$ and there exists a $z_0\in \DD$ such that $\abs{f(z_0)} < 1$, then the image of $f$ contains the unit disc.
 
 
-### 3.8.19
+### Spring 20202 HW 3 #  3.8.19
 
 Prove that maximum principle for harmonic functions, i.e.
 
@@ -130,7 +130,7 @@ b. Suppose $\Omega$ is a region with compact closure $\bar \Omega$.
 
 ## Extra Problems
 
-### 1
+### Spring 20202 HW 3 #  1
 
 Problem
 : Prove that if $f$ has two Laurent series expansions,
@@ -139,7 +139,7 @@ Problem
   \]
   then $c_n = c_n'$.
 
-### 2
+### Spring 20202 HW 3 #  2
 
 Problem
 : Find Laurent series expansions of
@@ -148,14 +148,14 @@ Problem
   \]
   How many such expansions are there? In what domains are each valid?
 
-### 3
+### Spring 20202 HW 3 #  3
 
 Problem
 : Let $P, Q$ be polynomials with no common zeros. Assume $a$ is a root of
 $Q$.
   Find the principal part of $P/Q$ at $z=a$ in terms of $P$ and $Q$ if $a$ is (1) a simple root, and (2) a double root.
 
-### 4
+### Spring 20202 HW 3 #  4
 
 Problem
 :   Let $f$ be non-constant, analytic in $\abs{z} > 0$, where $f(z_n) = 0$
@@ -165,13 +165,13 @@ for infinitely many points $z_n$ with $\lim_{n\to\infty} z_n = 0$.
 
     > Example: $f(z) = \sin(1/z)$.
 
-### 5
+### Spring 20202 HW 3 #  5
 
 Problem
 : Show that if $f$ is entire and $\lim_{z\to\infty}f(z) = \infty$, then
 $f$ is a polynomial.
 
-### 6
+### Spring 20202 HW 3 #  6
 
 Problem
 :   \hfill
@@ -184,7 +184,7 @@ Problem
     \int_0^1 \log(\sin(\pi x)) ~dx = -\log 2
     .\]
 
-### 7
+### Spring 20202 HW 3 #  7
 
 Problem
 : Let $0<a<4$ and evaluate 
@@ -192,7 +192,7 @@ Problem
   \int_0^\infty \frac{x^{\alpha-1}}{1+x^3} ~dx
   \]
 
-### 8
+### Spring 20202 HW 3 #  8
 
 Problem
 :   Prove the fundamental theorem of Algebra using
@@ -200,7 +200,7 @@ Problem
     a.  Rouche's Theorem.
     b. The maximum modulus principle.
 
-### 9
+### Spring 20202 HW 3 #  9
 
 Problem
 :   Let $f$ be analytic in a region $D$ and $\gamma$ a rectifiable curve in
@@ -208,7 +208,7 @@ $D$ with interior in $D$.
 
     Prove that if $f(z)$ is real for all $z\in \gamma$, then $f$ is constant.
 
-### 10
+### Spring 20202 HW 3 #  10
 
 Problem
 : For $a> 0$, evaluate
@@ -216,24 +216,24 @@ Problem
   \int_0^{\pi/2} \frac{d\theta}{a + \sin^2 \theta}
   \]
 
-### 11
+### Spring 20202 HW 3 #  11
 
 Problem
 : Find the number of roots of $p(z) = 4z^4 - 6z + 3$ in $\abs{z} < 1$ and
 $1 < \abs{z} < 2$ respectively.
 
-### 12
+### Spring 20202 HW 3 #  12
 
 Problem
 : Prove that $z^4 + 2z^3 -2z + 10$ has exactly one root in each open
 quadrant.
 
-### 13
+### Spring 20202 HW 3 #  13
 
 Problem
 : Prove that for $a> 0$, $z\tan z - a$ has only real roots.
 
-### 14
+### Spring 20202 HW 3 #  14
 
 Problem
 :   Let $f$ be nonzero, analytic on a bounded region $\Omega$ and continuous
